@@ -11,5 +11,6 @@ namespace RedVentures.Bot_O_Mat.API.Services
         Task<Robot> GetRobot(int Id);
         Task<IEnumerable<Robot>> GetRobotsBy(string Name, RobotType? Type, int Skip = 0);
         Task ScrapRobot(int Id);
+        Task<Robot> PerformErrand(Robot robot, ErrandType errandType);
     }
 }
