@@ -18,7 +18,7 @@ added robotcontroller functionality to get, getmany, and delete
 added errand entity
 made fk on errand icanperformerrand to allow us to use non-robot types (perhaps cyborgs and what not)
 added errand staty and type enums for value conversion and east of select generation
-added a seed method but it kept failing. TODO: understand seed method failure
+added a seed method but it kept failing. TODO: understand seed method failure, else cleanup and abandon
 added robot and errand view models
 modified irobotservice
 added robotservice
@@ -26,3 +26,9 @@ Add-Migration InitialCreate -OutputDir "Data/Migrations" -Context BotOMatContext
 Update-Database -Context BotOMatContext
 added a refreshRobotCacheFilter on command requests
 added simple validaiton to robot controller
+consider extracting modelstate validation into a wrapper oof sorts: https://benfoster.io/blog/automatic-modelstate-validation-in-aspnet-mvc
+general cleanup
+added put action on robotcontroller to handle errands
+modified errant to accept icanperformerrand
+added ActorType to icanperformerrand to identify 'actor level type'
+added erranservice to handle errand performance
